--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="tst"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JDK 1.2.2"/>
-	<classpathentry sourcepath="/JUNIT_SRC_HOME" kind="var" path="JUNIT_HOME/junit.jar"/>
-	<classpathentry sourcepath="/ANT_HOME/src.zip" kind="var" path="ANT_HOME/lib/ant.jar">
-		<attributes>
-			<attribute value="file:/C:/Tools32/Develop/Ant16/docs/manual/api/" name="javadoc_location"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" output="bin" path="src"/>
+	<classpathentry kind="var" path="JRE_LIB" sourcepath="JRE_SRC"/>
+	<classpathentry kind="con" path="/Users/ikallen/Documents/eclipse/ant-eclipse/bin"/>
+	<classpathentry kind="lib" path="lib/ant-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
